# vectorbt-fastapi-nextjs

./: .gitignore  CLAUDE.md  GEMINI.md  HowToMake.md  INTRADAY_MODE.md  README.md  pyproject.toml  run.ps1
.claude/: settings.local.json
.claude/.md/: GEMINI.md
backend/: data_cache.py  engine.py  fyers_auth_helper.py  fyers_client.py  main.py  models.py  requirements.txt
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: TradingChart.tsx
scripts/: benchmark_buyhold.py  smoke_pro_trader.py  tune_pro_trader.py
strategies/: base.py  intraday_scalper.py  pro_trader.py  sma_crossover.py  sma_rsi.py
